# cef-rs-message-router

./: .gitignore  Cargo.toml  README.md  build.rs
resources/linux/: message_router.html
src/: lib.rs  mac.rs  main.rs  win.rs
src/shared/: app_browser_impl.rs  app_renderer_impl.rs  client_impl.rs  mod.rs  resource_util.rs  resources.rs
src/shared/platform/: mac.rs  mod.rs
src/tests_shared/: mod.rs  process_type.rs
src/tests_shared/resource_util/: mod.rs  posix.rs  win.rs
